# gba_tile_manager

./: .gitignore  Cargo.toml  README.md
resources/: config.json  empty_art.csv  empty_art_boops.csv  structure.json
src/: boop.rs  character.rs  character_data.rs  color.rs  err.rs  error.rs  main.rs  map.rs  palette.rs  png.rs  png_util.rs  project.rs  render.rs  savable.rs  screen.rs  tile.rs  tile_iter.rs
src/domain/: boop.rs  character.rs  color.rs  err.rs  map.rs  mod.rs  palette.rs  project.rs  screen.rs  tile.rs
src/project/: boop.rs  character.rs  csv.rs  digest.rs  mod.rs  palette.rs  screen.rs
src/render/: handle.rs  image.rs  layer.rs  mod.rs  png.rs  render.rs
src/ui/: boop_view.rs  editor.rs  mod.rs  palette_editor.rs  palette_input.rs  palette_selector.rs  palette_view.rs  screen_view.rs  selector.rs  tile_input.rs  tile_selector.rs  tile_view.rs
