[package]
name = "gba_tile_manager"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempdir = "0.3"
png = "0.18"
iced = { version = "0.14", features = ["advanced", "image", "canvas"] }
iced_aw = "0.13"
lazy_static = "1.5.0"
sweeten = "0.14"